--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -11,7 +11,7 @@ author_profile: true
 
 {% endif %}
 <p>
-     <a href="/assets/posters/poster.pdf" download>Download My Talk Poster (PDF)</a>
+     <a href="/files/postericml.pdf" download> Download My Talk Poster (PDF)</a>
 </p>
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
