--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,7 +5,7 @@ permalink: /publications/
 author_profile: true
 ---
 
-
+[Find my full publication record here](https://scholar.google.com/citations?user=HA-GlnkAAAAJ&hl=en)
 
 {% include base_path %}
 
