--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,8 +5,7 @@ permalink: /publications/
 author_profile: true
 ---
 
-[Find my full publication record here](https://scholar.google.com/citations?user=HA-GlnkAAAAJ&hl=en)
-
+<a href="https://scholar.google.com/citations?user=HA-GlnkAAAAJ&hl=en">Find full publication record here!</a>
 {% include base_path %}
 
 <!-- New style rendering if publication categories are defined -->
